syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message MarkAvatarScRsp {
	bool is_marked = 14;
	uint32 avatar_id = 8;
	uint32 retcode = 7;
}